--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
     height: 100vh;
     color: rgb(123, 154, 220);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    overflow-y : hidden ;
 }
 ul{
     list-style: none;
